--- a/pootle/static/css/style.css
+++ b/pootle/static/css/style.css
@@ -400,6 +400,11 @@ html[dir="rtl"] #nav-access
 {
     vertical-align: middle;
 }
+#user a > *
+{
+    vertical-align: middle;
+    line-height: 1;
+}
 
 #navbar a
 {
@@ -583,7 +588,6 @@ html[dir="rtl"] #nav-main li
     width: 24px;
     height: 24px;
     margin: 0 8px;
-    vertical-align: middle;
     border: 2px solid white;
     border-radius: 3px;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.5);
